quiz/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: pnt-quiz
  labels:
    app: backend
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
