quiz/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pnt-ingress
  namespace: pnt-quiz
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
